Initialisation du site étape 2

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-title: Project 2017 au Cnam Liban (Linux, Concurance Java, Systèmes mobile et répartis)
+title: Projects 2017 au Cnam Liban (Linux, Concurrence Java, Systèmes mobile et répartis)
 
 theme: jekyll-theme-cayman
