Controller,interface and value object of the module 'Supplier'

--- a/StockManagement Solution/StockManagement.ObjectModel/nbproject/private/private.properties
+++ b/StockManagement Solution/StockManagement.ObjectModel/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Elie\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
