Commit Client Bean via upload

--- a/StockManagement Solution/StockManagement.Services/nbproject/private/private.properties
+++ b/StockManagement Solution/StockManagement.Services/nbproject/private/private.properties
@@ -7,4 +7,4 @@ j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\Mike\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\chira\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
