--- a/StockManagement Solution/StockManagement.Web/nbproject/private/private.properties
+++ b/StockManagement Solution/StockManagement.Web/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Mike\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\chira\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/Mike/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
